# libqtxdg

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  Doxyfile  README  README.md  desktopenvironment_p.cpp  release.sh  xdgaction.cpp  xdgaction.h  xdgautostart.cpp  xdgautostart.h  xdgdesktopfile.cpp  xdgdesktopfile.h  xdgdesktopfile_p.h  xdgdirs.cpp  xdgdirs.h  xdgicon.cpp  xdgicon.h  xdgmacros.h  xdgmenu.cpp  xdgmenu.h  xdgmenu_p.h  xdgmenuapplinkprocessor.cpp  xdgmenuapplinkprocessor.h  xdgmenulayoutprocessor.cpp  xdgmenulayoutprocessor.h  xdgmenureader.cpp  xdgmenureader.h  xdgmenurules.cpp  xdgmenurules.h  xdgmenuwidget.cpp  xdgmenuwidget.h  xdgmime.cpp  xdgmime.h  xdgmimetype.cpp  xdgmimetype.h  (+2 more)
.github/: ISSUE_TEMPLATE.md
cmake/: FindLibSuffix.cmake  Qt5XdgConfig.cmake.in  QtTranslate.cmake  QtXdgConfig.cmake.in  QtXdg_use.cmake  compiler_settings.cmake  create_pkgconfig_file.cmake  create_portable_headers.cmake  prevent_in_source_builds.cmake  qt5xdg-config.cmake.in  qt5xdgConfig.cmake.in  qt5xdg_use.cmake  qt5xdgiconloader-config.cmake.in  qt6xdg-config.cmake.in  qt6xdgiconloader-config.cmake.in  qtxdg-config.cmake.in  qtxdgConfig.cmake.in  qtxdgConfigVersion.cmake.in  qtxdgTranslate.cmake  qtxdg_use.cmake
config/: lxqt-qtxdg.conf  qtxdg.conf
examples/use-qtxdg/: CMakeLists.txt  README
qiconfix/: qiconloader.cpp  qiconloader_p.h  qiconloader_qt4.cpp
qtxdg/: CMakeLists.txt  xdgaction.cpp  xdgaction.h  xdgautostart.cpp  xdgautostart.h  xdgdesktopfile.cpp  xdgdesktopfile.h  xdgdirs.cpp  xdgdirs.h  xdgicon.cpp  xdgicon.h  xdgmacros.h  xdgmenu.cpp  xdgmenu.h  xdgmenu_p.h  xdgmenuapplinkprocessor.cpp  xdgmenuapplinkprocessor.h  xdgmenulayoutprocessor.cpp  xdgmenureader.cpp  xdgmenureader.h  xdgmenurules.cpp  xdgmenurules.h  xdgmenuwidget.cpp  xdgmenuwidget.h  xdgmimetype.cpp  xdgmimetype.h  xmlhelper.cpp  xmlhelper.h
qtxdg/qiconfix/: qiconloader.cpp
src/: CMakeLists.txt
src/qtxdg/: CMakeLists.txt  xdgaction.cpp  xdgaction.h  xdgautostart.cpp  xdgautostart.h  xdgdefaultapps.cpp  xdgdefaultapps.h  xdgdesktopfile.cpp  xdgdesktopfile.h  xdgdirs.cpp  xdgdirs.h  xdgicon.cpp  xdgmenu.cpp  xdgmenu.h  xdgmenu_p.h  xdgmenuapplinkprocessor.cpp  xdgmenuapplinkprocessor.h  xdgmenulayoutprocessor.cpp  xdgmenureader.cpp  xdgmenureader.h  xdgmenurules.cpp  xdgmenurules.h  xdgmenuwidget.cpp  xdgmenuwidget.h  xdgmimeapps.cpp  xdgmimeappsbackendinterface.cpp  xdgmimeappsglibbackend.cpp  xdgmimetype.cpp  xdgmimetype.h  xmlhelper.cpp  xmlhelper.h
src/tools/mat/: CMakeLists.txt  defappmatcommand.cpp  defemailclientmatcommand.cpp  deffilemanagermatcommand.cpp  defterminalmatcommand.cpp  defterminalmatcommand.h  defwebbrowsermatcommand.cpp  matcommandinterface.cpp  matcommandmanager.cpp  mimetypematcommand.cpp  openmatcommand.cpp  qtxdg-mat.cpp
src/xdgiconloader/: CMakeLists.txt  xdgiconloader.cpp  xdgiconloader_p.h
src/xdgiconloader/plugin/: CMakeLists.txt
test/: CMakeLists.txt  qtxdg_test.cpp  qtxdg_test.h  tst_xdgdesktopfile.cpp  tst_xdgdesktopfile.h  tst_xdgdirs.cpp
translations/: libqtxdg_ar.ts  libqtxdg_cs.ts  libqtxdg_cs_CZ.ts  libqtxdg_da.ts  libqtxdg_da_DK.ts  libqtxdg_de_DE.ts  libqtxdg_el_GR.ts  libqtxdg_eo.ts  libqtxdg_es.ts  libqtxdg_es_VE.ts  libqtxdg_eu.ts  libqtxdg_fi.ts  libqtxdg_fr_FR.ts  libqtxdg_hu.ts  libqtxdg_id_ID.ts  libqtxdg_it_IT.ts  libqtxdg_ja.ts  libqtxdg_lt.ts  libqtxdg_nl.ts  libqtxdg_pl_PL.ts  libqtxdg_pt.ts  libqtxdg_pt_BR.ts  libqtxdg_ro_RO.ts  libqtxdg_ru.ts  libqtxdg_ru_RU.ts  libqtxdg_sk_SK.ts  libqtxdg_sl.ts  libqtxdg_sr_RS.ts  libqtxdg_th_TH.ts  libqtxdg_tr.ts  libqtxdg_uk.ts  libqtxdg_zh_CN.ts  libqtxdg_zh_TW.ts
util/: CMakeLists.txt  qtxdg-desktop-file-start.cpp  qtxdg-iconfinder.cpp
xdgiconloader/: CMakeLists.txt  xdgiconloader.cpp  xdgiconloader_p.h
xdgiconloader/plugin/: CMakeLists.txt  xdgiconengineplugin.cpp  xdgiconengineplugin.h
